# embodied-ai

./: .gitignore  CLAUDE.md  README-ja.md  socialPolicy.toml
.claude/: settings.json
.claude/hooks/: auto-social.sh
.claude/rules/: mcp-server-design.md  memory-mcp.md  python-mcp-dev.md  social-policy.md  sociality-mcp.md  system-temperature.md  tts.md  usb-webcam.md  wifi-cam.md
.claude/skills/interaction/: SKILL.md
.claude/skills/screen-read/: SKILL.md
.claude/skills/screen-read/scripts/: screen_read_helper.py
docs/: CHRONICLE.md  HANDOVER.md  memory-sociality-overview.md  pal-openrouter-operations.md  アーキテクチャ.md  結合アルゴリズム.md  要件定義.md
docs/archive/: handover-20260421-1912.md  handover-20260422-0037.md  handover-20260428-1748.md  handover-20260428-2017.md  handover-20260428-2235.md  handover-20260429-0958.md  handover-20260429-1127.md  handover-20260429-2248.md  handover-20260504-1231.md  handover-20260506-1531.md  handover-20260506-2135.md  handover-20260507-1923.md  handover-20260520-1123.md  handover-20260521-1111.md  handover-20260521-1615.md
screen_read/: merge.py  preprocess.py  pyproject.toml
screen_read/tests/: test_merge.py  test_preprocess.py
sociality-mcp/src/sociality_mcp/: server.py
