[project]
name = "screen-read"
version = "0.1.0"
description = "Deterministic OCR page merger and screen-capture pipeline for embodied Claude"
requires-python = ">=3.10"
dependencies = [
    "rapidfuzz>=3.5.0",
]

[project.optional-dependencies]
preprocess = [
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["merge.py"]
